app/stylesheets/design/_agency.scss
$doc_icon_mini_width: 20;
$doc_icon_mini_height: 20;

#agencies .search_bar { 
  margin-left: 0;
  width: 580px;
  padding: 1em 0 .6em;
  }
#agencies .search_bar #conditions_term { width: 244px; }
#agencies .formtastic li.hidden { position: absolute; }
#agencies .formtastic #conditions_type_input { display: none; }


#agencies #sidebar .sub_agencies li.show_hide a,
#agencies p.show_hide a { 
  cursor: pointer;
  font-weight: bold;
}

#agencies #sidebar .sub_agencies li.show_hide { background: none; }


.grouped_by_date .rule_type {
  width: $doc_icon_mini_width + px;
  height: $doc_icon_mini_height + px;
  display: inline-block;
  overflow: hidden;
  padding: 0;
  }

.grouped_by_date li .rule_type img { 
  position: relative;
  }

.grouped_by_date li .rule_type.doc_presdocu img { top: -1px; }
.grouped_by_date li .rule_type.doc_rule img { top: -211px; }
.grouped_by_date li .rule_type.doc_notice img { top: -422px; }
.grouped_by_date li .rule_type.doc_prorule img { top: -632px; }
.grouped_by_date li .rule_type.doc_correct img { top: -1054px; }

.grouped_by_date .rule_type + a {
  display: inline-block;
  padding-left: $doc_icon_mini_width + 10 + px;
  }

